# lain

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART_AGENTS.md  README.md  STATUS.md  TECHNICAL.md  bootstrap.sh  install-mcp.sh  server.json
.claude/: lain-skill.md
.github/workflows/: ci.yml  release.yml
docs/: QUICKSTART_AGENTS.md  TECHNICAL.md  query-language.md  quickstart-query.md  quickstart-tools.md  toolchain-multiplexer.md
npm-shim/: README.md  package.json
npm-shim/scripts/: install.js  install.test.js
proptest-regressions/tools/: proptest_helpers.txt
scripts/: install.sh
src/: error.rs  error_tests.rs  git.rs  git_tests.rs  graph.rs  graph_tests.rs  lib.rs  lsp.rs  main.rs  nlp.rs  overlay.rs  overlay_tests.rs  schema.rs  schema_tests.rs  toolchains.rs  tools.rs  treesitter.rs  tuning.rs  tuning_tests.rs  watcher.rs
src/mcp/: front_end_monitor.html  handler.rs  mod.rs
src/query/: executor.rs  executor_tests.rs  mod.rs  schema.rs  spec.rs  spec_tests.rs
src/sensors/: graphql_sensor.rs  http_sensor.rs  mod.rs  openapi_sensor.rs  proto_sensor.rs  websocket_sensor.rs
src/server/: ingestion.rs  jobs.rs  mod.rs  scan.rs
src/tools/: definitions.rs  proptest_helpers.rs  registry.rs  utils.rs  utils_tests.rs
src/tools/handlers/: architecture.rs  architecture_tests.rs  context.rs  context_tests.rs  cross_runtime.rs  cross_runtime_tests.rs  decoration.rs  enrichment.rs  enrichment_tests.rs  execution.rs  filesystem.rs  filesystem_tests.rs  gitops.rs  gitops_tests.rs  impact.rs  metrics.rs  metrics_tests.rs  mod.rs  navigation.rs  query.rs  query_tests.rs  registry_impl.rs  search.rs  testing.rs  testing_tests.rs
src/tools/handlers/decoration/: decorator.rs  enricher.rs  mod.rs  project.rs  types.rs
src/tools/handlers/decoration/parsers/: cargo.rs  cargo_text.rs  go.rs  jest.rs  mod.rs  python.rs  test_output.rs
src/ui/: blast-radius.html  call-chain.html  coupling.html
tests/: decoration_tests.rs  graph_benchmark.rs  graph_invariants.rs  integration_jobs.rs
tests/e2e/: README.md  lain_test.py  requirements.txt  test_lain.py
toolchains/: README.md
