[package]
name = "lain"
version = "0.1.0"
edition = "2021"
description = "Lain - Structural code intelligence for AI agents"
authors = ["spuentesp"]
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# MCP Server (Model Context Protocol)
rust-mcp-sdk = { version = "=0.9.0", default-features = false, features = ["server", "stdio", "macros", "hyper-server"] }
rust-mcp-schema = "0.10.0"

# HTTP server for diagnostics UI
hyper = { version = "1.9", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body = "1.0"
http-body-util = "0.1"

# Async trait for MCP server handlers
async-trait = "0.1"

# Tauri dependency for desktop app

# Git integration
git2 = "0.19"

# File watching
notify = "6"

# In-memory graph for volatile overlay
petgraph = { version = "0.6", features = ["serde-1"] }

# Persistence
bincode = "1.3"

# NLP & Machine Learning
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
tokenizers = "0.21"

# LSP bridge for multi-language support
lsp-bridge = "0.2"
lsp-types = "0.97"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async channels
flume = "0.11"

# Path handling
walkdir = "2.4"
glob = "0.3"
dunce = "1.0"
shell-words = "1.0"

# Tree-sitter static analysis
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }

# Regex for pattern matching
regex = "1.10"
ignore = "0.4"
serde_yaml = "0.9"
toml = "0.8"

# Once cell for static initialization
once_cell = "1.19"
inventory = "0.1"

# Directory management
dirs = "5.0"
parking_lot = "0.12.5"
which = "8.0.2"

# Concurrency primitives
dashmap = "6.0"
rayon = "1.10"
async-recursion = "1.1.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Unix process checks (for single-instance guard)
libc = "0.2"

# Tree-sitter static analysis
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"

[dev-dependencies]
tempfile = "3.8"
proptest = { version = "1.5", features = ["std"] }
inventory = "0.1"

[lib]
name = "lain"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
